# nlp-movie-sentiment

./: README.md  pyproject.toml
notebooks/: 01-sentiment-classification.ipynb  02-sentiment-huggingface.ipynb
