[project]
name = "nlp-movie-sentiment"
version = "0.1.0"
description = "Sentiment classification of Rotten Tomatoes movie reviews using TF-IDF and machine learning, built with Python (Scikit-learn, Pandas, NumPy)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
    "matplotlib>=3.10",
    "nltk>=3.9",
    "numpy>=2.2",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "seaborn>=0.13",
]
